--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+body {
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#root {
+    height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 50px;
+    background-color: #2E2E2E;
+
+}
+
+.main-wrapper {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header__img {
+    height: 50px;
+}
+
+.header__item {
+    padding: 5px;
+    height: 20px;
+    margin-right: 20px;
+    background-color: #484848;
+    border-radius: 5px;
+    color: white
+}
+
+.form {
+    width: 300px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px #cccccc;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input,
+  textarea {
+    width: 95%;
+    margin-bottom: 10px;
+    padding: 2px 5px;
+    font-family: "Roboto", sans-serif;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    line-height: 2;
   }
-  to {
-    transform: rotate(360deg);
+
+input[type="submit"] {
+    display: inline-block;
+    width: auto;
+    margin: 0 5px;
+    padding: 6px 15px;
+    color: #ffffff;
+    background-color: #2c3e50;
+    border: none;
+    border-radius: 5px;
   }
+
+.footer {
+    height: 50px;
+    background-color: #2E2E2E;
 }
