--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,7 @@ body {
 
 .main-wrapper {
     width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
 }
 
 .header__img {
